<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/new_movement" />
        <item
            android:id="@+id/nav_movements"
            android:icon="@drawable/ic_history"
            android:title="@string/my_movements" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/statistics" />
        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_notifications"
            android:title="Recordatorios" />
    </group>

    <item android:title="@string/config">
        <menu>
            <item
                android:id="@+id/nav_management"
                android:icon="@drawable/ic_categories"
                android:title="Gestión" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>