<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="1dp"
    app:cardBackgroundColor="?attr/cardBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConcept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_concept_name"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="?attr/textPrimary"/>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_date_name"
                android:textSize="11sp"
                android:textColor="?attr/textTertiary"
                android:layout_marginTop="4dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_amount_name"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>